[package]
name = "dblik"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dblik"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
arrayref = "0.3.7"
bytemuck = {version = "1.4.0", features = ["derive", "min_const_generics"]}
mockall = "0.12.1"